prevent substituting Item_ref as VIEW fields in WHERE conditions (BUG#5969) prevent filling temporary tables of views on list fields command