sql/opt_range.cc
@@ -1533,7 +1533,7 @@ int SQL_SELECT::test_quick_select(THD *thd, key_map keys_to_use,
 {
   uint idx;
   double scan_time;
-  DBUG_ENTER("test_quick_select");
+  DBUG_ENTER("SQL_SELECT::test_quick_select");
   //printf("\nQUERY: %s\n", thd->query);
   DBUG_PRINT("enter",("keys_to_use: %lu  prev_tables: %lu  const_tables: %lu",
 		      keys_to_use.to_ulonglong(), (ulong) prev_tables,
